# wshayes.github.io

./: .gitignore  BLOWFISH_GUIDE.md  README.md  config.yaml  go.mod  justfile  pyproject.toml
.github/workflows/: deploy.yml
config/_default/: hugo.toml  languages.en.toml  menus.en.toml  module.toml  params.toml
content/about/: index.md
content/blog/: index.md
content/credits/: index.md
content/posts/: _index.md
content/posts/a-typical-biodati-workflow/: index.md
content/posts/acid-reflux-camping-hammocks-and-holes/: index.md
content/posts/aim-for-sales/: index.md
content/posts/an-expanding-future-for-librarians/: index.md
content/posts/aurelia-autocomplete-or-typeahead/: index.md
content/posts/aurelia-change-event-firefox-woes/: index.md
content/posts/aurelia-custom-element-async-life-cycle/: index.md
content/posts/aurelia-delegate-vs-trigger/: index.md
content/posts/aurelia-doesnt-do-deep-observation-on/: index.md
content/posts/aurelia-firefox-and-input-fields/: index.md
content/posts/aurelia-view-engine-hook-for-importing/: index.md
content/posts/bel-2-1-enhancements/: index.md
content/posts/bel-bio-announcement/: index.md
content/posts/bel-namespace-completion/: index.md
content/posts/biopharma-data-standards/: index.md
content/posts/capex-opex-and-cloud/: index.md
docs/: 404.html  CNAME  index.html
docs/blog/: index.html
docs/credits/: index.html
docs/tags/: index.html
scripts/: fix_image_names.py  medium_manifest.json  medium_manifest.py  medium_scrape.py  medium_tags.json  migrate_blogger.py  migrate_medium.py
(+73 files in other folders)
